--- a/index.html
+++ b/index.html
@@ -1,2 +1,11 @@
-Hello World
-My name is Graham
+<!--Hello World
+My name is Graham-->
+<p>>Graham came in and caught me red-handed
+				breaking his code for fun
+				Picture this I wrecked his website for no reason
+				and dropping lyrics on the code screen
+				How could he forget that he had
+				Had given me access to his project
+				All this time he blieved in me
+				meanwhile I wrecked it all!
+				It wasn't me</p>
